src/components/external/DisputeManagement/components/DefendDisputeFlow/DefendDisputeFlow.scss
@use '../../../../../style';

@mixin adyen-pe-dropdown-overrides {
    &__dropdown-list {
        max-height: 270px;
        overflow: hidden scroll;

        &--mobile {
            left: 0;
            position: fixed;
            top: 0;
            width: 80%;
            z-index: 30;
        }
    }
}

.adyen-pe-defend-dispute {
    &__container {
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-070);
        width: 100%;
    }

    &-document-requirements {
        font-family: inherit;

        &--list {
            margin: 0;
            padding-left: style.token(spacer-070);
        }
    }

    &__error-icon {
        color: style.token(color-background-critical-strong);
        font-size: style.token(spacer-110);
        padding: style.token(spacer-040);

        svg {
            display: block;
        }
    }

    &__response {
        align-items: center;
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-070);
        padding: style.token(spacer-100) 0;
        text-align: center;
    }

    &__error {
        align-items: center;
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-070);
        justify-content: center;
        max-width: 436px;
    }

    &__success {
        align-items: center;
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-070);
        justify-content: center;
    }

    &__success-icon {
        color: style.token(color-background-success-strong);
        font-size: style.token(spacer-110);
        padding: style.token(spacer-040);

        svg {
            display: block;
        }
    }

    &__success-description {
        max-width: 350px;
    }

    &__success-buttons {
        display: flex;
        gap: style.token(spacer-070);
    }

    &__reason-description {
        color: style.token(color-label-secondary);
    }

    &__title {
        font-size: style.token(text-title-font-size);
    }

    &__defended-btn {
        &.adyen-pe-button {
            background: style.token(color-background-success-strong);
            color: style.token(color-label-inverse-primary);
        }
    }

    &__defended-icon {
        font-size: 16px;

        svg {
            display: block;
        }
    }
}

.adyen-pe-defend-dispute-reason {
    @include adyen-pe-dropdown-overrides;

    &__selector {
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-040);
    }

    &__description {
        color: style.token(color-label-secondary);
        font-size: style.token(text-caption-font-size);
    }

    &__secondary-description-items-container {
        margin: 0;
        padding: 0 style.token(spacer-080);
    }

    &__secondary-description-item::marker {
        color: style.token(color-label-secondary);
    }
}

.adyen-pe-defend-dispute-file-uploader {
    &__container {
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-080);
    }
}

.adyen-pe-defend-dispute-document-upload-box {
    border: 1px solid style.token(color-outline-primary);
    border-radius: style.token(border-radius-l);
    padding: style.token(spacer-080);

    // stylelint-disable order/order
    @include adyen-pe-dropdown-overrides;

    &__delete-button-container {
        align-items: center;
        display: flex;
        justify-content: space-between;

        svg {
            display: block;
            font-size: style.token(text-title-font-size);
        }
    }

    &__extra-documents {
        padding: style.token(spacer-070) 0;
    }

    &__extra-documents-selector {
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-060);
    }

    &__extra-documents-selector-title {
        font-size: style.token(text-title-font-size);
        font-weight: 700;
        line-height: style.token(text-caption-line-height);
    }

    &__required-documents {
        display: flex;
        flex-direction: column;
        gap: style.token(spacer-110);
    }
}

.adyen-pe-defend-dispute-document-upload {
    display: flex;
    flex-direction: column;
    gap: style.token(spacer-060);

    &__title {
        font-size: style.token(text-title-font-size);
        font-weight: 700;
        line-height: style.token(text-caption-line-height);
    }

    &__description {
        color: style.token(color-label-secondary);
        margin-top: style.token(spacer-040);
    }
}

